# prelude-emu

./: CMakeLists.txt  IAL.md  header.hpp  inst_set.hpp  module.cpp  module.hpp  prelude.cpp  prelude.hpp  register.cpp  register.hpp  stack.hpp
assembler/: CMakeLists.txt  asm.cpp  asm.hpp  token.hpp
assembler/tests/: CMakeLists.txt  test.cpp  test.plasm
tests/: CMakeLists.txt  helloworld.plasm  t0.plasm  t1.plasm  t1.ple.layout  t2.plasm  t3.plasm  test.cpp
